@@ -19,7 +19,7 @@
 #define MPG123_PATCH 0
 // Don't get too wild with that to avoid confusing m4. No brackets.
 // Also, it should fit well into a sane file name for the tarball.
-#define MPG123_SUFFIX "-dev+20250525022201"
+#define MPG123_SUFFIX "-dev+20250607022201"
 
 #define MPG123_VERSION_CAT_REALLY(a, b, c) #a "."  #b  "." #c
 #define MPG123_VERSION_CAT(a, b, c) MPG123_VERSION_CAT_REALLY(a, b, c)
