@@ -6,12 +6,20 @@
 -- Make --continue mode work with --random.
 -- Handle possible failure of __wgetmainargs on Windows (bug 375).
 - mpg123-id3dump: Fix up command line arg handling for Windows.
+- out123
+-- Finally give zero exit code when generating sounds, not indicating
+   spurious failure.
 - build:
 -- Use CCASFLAGS for assembler tests, to enable builds that enable instruction
    sets that way (bug 377).
-- compat: Map strtok use to strtok_r or strtok_s (MS platforms), if possible.
-  users only in control_generic and libout123 so far. Out123 itself uses mytok.
-  Shall fix bug 376 (build with MSVC again).
+-- PIC for compat libs (convenience libs used during build) only if building
+   shared libs (github PR 17 by Wouter Wijsman).
+- compat:
+-- Map strtok use to strtok_r or strtok_s (MS platforms), if possible.
+   users only in control_generic and libout123 so far. Out123 itself uses mytok.
+   Shall fix bug 376 (build with MSVC again).
+-- Enable build on PSP by merging in the hotfix of opmitting signal code
+   (github PR 18 by Wouter Wijsman).
 - libout123
 -- modules/win32: Align waveOutGetDevCapsA to WAVEOUTCAPSA, in anticipation
    of some UNICODE change.
